2005-01-11  Gray Watson  <gray@outside.256.com>

	* Added some fixes for Compaq's C compiler, some include ordering
	fixes, and some C++ compiler defines.  Thanks Burl.

2004-12-03  Gray Watson  <gray@outside.256.com>

	* Improved dmalloc_t to better detect and test a small heap area.

2004-10-19  Gray Watson  <gray@outside.256.com>

	* Releasing dmalloc version 5.4.2.

	* Refined the definition of the 'alloc-blank' and 'free-blank'
	tags.  The 'alloc-blank' token clear various parts of the
	allocation block when it is allocated.  The 'free-blank' token
	clears a pointer when it is freed.

	* Also, the library was clearing the user spaces of an allocated
	chunk with the alloc-blank character and the non-user spaces with
	the free-blank character.  This seemed confusing and wrong so now
	all sections of an allocated chunk are cleared with the
	alloc-blank character.

	* Fixed a couple of longer standing stupid bugs via feedback from
	Philippe.  Thanks dude.

2004-10-12  Gray Watson  <gray@outside.256.com>

	* Releasing dmalloc version 5.4.1.

	* Found and fixed a stupid little test bug so re-released as 5.4.1.

	* Releasing dmalloc version 5.4.0.

	* Added return.h support for ARM processors from Silvester Erdeg.

	* Improved the manual a bit.

2004-09-13  Gray Watson  <gray@outside.256.com>

	* Made allocating zero size chunks the default.

2004-08-13  Gray Watson  <gray@outside.256.com>

	* Fixed some missing ; and a int/unsigned-int bug from feedback
	from Joe Buehler.

	* Added return.h support for AIX 4.3 RS/6000 from Joe Buehler.

	* Added backwards compatibility (ugh) to %d for logfile name.

2004-07-10  Gray Watson  <gray@outside.256.com>

	* Starting release of 5.4.0 with beta.

2004-07-09  Gray Watson  <gray@outside.256.com>

	* Removed force-linear token because made invalid with mmap
	addition.

	* Removed the growing up testing and other restrictions for the
	heap because mmap made it invalid.  Drastically reduced the